# twitter-api-hs

./: .travis.yml  README.md  stack.yaml  twitter-api-hs.cabal
app/: Main.hs
src/: App.hs
src/Core/: Utils.hs
src/Twitter/: Adapter.hs  AdapterImpl.hs  CacheAdapter.hs  Config.hs  Model.hs  Service.hs  ServiceImpl.hs  TwitterAdapter.hs
test/: Spec.hs
