name:                twitter-api-hs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/twitter-api-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
                     , src/Twitter
  exposed-modules:     App
                     , Core.Utils
                     , Twitter.Adapter
                     , Twitter.TwitterAdapter
                     , Twitter.CacheAdapter
                     , Twitter.Config
                     , Twitter.Model
                     , Twitter.Service
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , base64-bytestring
                     , bytestring
                     , bytestring-conversion
                     , data-default
                     , either
                     , http-client
                     , http-conduit
                     , http-types
                     , mtl
                     , scotty
                     , text
                     , time
                     , transformers
                     , wai
                     , wai-extra
                     , warp
                     , yaml
  default-language:    Haskell2010

executable twitter-api-hs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , twitter-api-hs
  default-language:    Haskell2010

test-suite twitter-api-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , twitter-api-hs
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , http-types
                     , aeson
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/twitter-api-hs
